# tui-life-metrics

./: .gitignore  Cargo.toml  README.md  install.sh
src/: cli.rs  lib.rs  main.rs  metrics.rs  models.rs  paths.rs  period.rs  store.rs
src/parser/: claude.rs  mod.rs  prompt.rs
src/ui/: capture.rs  dashboard.rs  mod.rs
tests/: store_roundtrip.rs
